# corpus-db

./: .gitignore  Great_Gatsby_Analysis.ipynb  LICENSE  Main.hs  Makefile  README.md  corpus-db-next.cabal  corpus-db.cabal  default.nix  pg-mirror.sh  shell.nix  stack.yaml
Client/: CSS.hs
Controllers/: Home.hs
Views/: Home.hs
examples/: Gatsby_Color_Analysis.ipynb  Great_Gatsby_Color_Analysis (1).ipynb  Science Fiction.ipynb  Temporal Subject Analysis.ipynb  example-analyses.ipynb  fulltext-analysis.ipynb  subject-analysis.ipynb  subject-corpora.ipynb
scripts/: pg-mirror.sh
server/: configuration.nix  hardware-configuration.nix  install.sh  setup.sh
src/: Contents.hs  DB.hs  GitHub.hs  Main.hs  db.hs
src/Client/: CSS.hs
src/Controllers/: Home.hs
src/Views/: Home.hs  subject-analysis.html
