name:                corpus-db-next
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/JonathanReeve/corpus-db-next#readme
license:             BSD3
license-file:        LICENSE
author:              Jonathan Reeve
maintainer:          jon.reeve@gmail.com
copyright:           GPLv3
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable corpus-db-next
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       containers,
                       github,
                       Glob,
                       random,
                       rdf4h,
                       text,
                       xml,
                       vector
