name:                corpus-db
version:             0.0.1
-- synopsis:
-- description:
homepage:            https://github.com/JonathanReeve/corpus-db#readme
license:             GPL-3
license-file:        LICENSE
author:              Jonathan Reeve
maintainer:          jon.reeve@gmail.com
copyright:           Copyright: (c) 2017 Jonathan Reeve
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable corpus-db
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       scotty,
                       aeson

