name:                corpus-db
version:             0.0.1
-- synopsis:
-- description:
homepage:            https://github.com/JonathanReeve/corpus-db#readme
license:             GPL-3
license-file:        LICENSE
author:              Jonathan Reeve
maintainer:          jon.reeve@gmail.com
copyright:           Copyright: (c) 2017 Jonathan Reeve
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable corpus-db
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       aeson >= 1.1.2.0,
                       base >= 4.7 && < 5,
                       blaze-html,
                       blaze-markup,
                       clay,
                       containers,
                       convertible,
                       scotty,
                       HDBC,
                       HDBC-sqlite3,
                       monad-logger,
                       persistent,
                       persistent-sqlite,
                       persistent-template,
                       regex-pcre-builtin >= 0.94,
                       resourcet,
                       scotty,
                       text,
                       time,
                       transformers,
                       wai-middleware-static >= 0.8,
                       wai-extra >= 3.0
  other-modules:       Client.CSS
                       Controllers.Home
                       Views.Home
                       Views.Utils